# market-intelligence-platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.base  Makefile  README.md  Taskfile.yml  azure-pipelines.yml  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt
.codex/: README.md
.codex/checklists/: README.md  change.md
.github/: README.md
.github/workflows/: README.md  ci.yml
docs/: API.md  ARCHITECTURE.md  AZURE_PRODUCTION.md  BENCHMARKS.md  SEQUENCE.md
docs/ADRs/: 0001-service-bus-emulator-topology.md  0002-druid-micro-quickstart.md  0003-shared-schema-common-clients.md  0004-mock-first-llm-rag-guardrails.md  0005-observability-grafana.md  0006-openai-compatible-llm-provider.md  README.md
infra/: README.md  servicebus-config.json
infra/druid/: environment
infra/grafana/: README.md
libs/: __init__.py
libs/common/: README.md  __init__.py  bus.py  config.py  druid.py  es.py  logging.py  redis_client.py  resilience.py  schema.py
scripts/: bench.py  sb_peek.py  seed_market_data.py  ws_smoke.py
services/: __init__.py
services/ai/: Dockerfile  README.md  __init__.py  app.py  requirements.txt  service.py
services/alerting/: Dockerfile  README.md  __init__.py  app.py  replay.py  requirements.txt  rules.py  service.py
services/api/: Dockerfile  README.md  (+6 more)
tests/: test_bench.py  test_ci_pipeline.py  test_docs.py  test_environment.py  test_github_actions.py  test_infra_compose.py  test_repo_smoke.py  test_sb_peek.py  test_seed_market_data.py  test_service_requirements.py  test_stream_indicators.py  test_ws_smoke.py
(+81 files in other folders)
